--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
@@ -10,14 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=personal-shopper
 DB_USERNAME=homestead
-DB_PASSWORD=secret
-
-PG_CONNECTION=pgsql
-PG_HOST=127.0.0.1
-PG_PORT=5432
-PG_DATABASE=personal-shopper
-PG_USERNAME=homestead
-PG_PASSWORD=secret
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
