--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,8 @@
 /storage/*.key
 /vendor
 /.idea
-/.vagrant
-Homestead.json
-Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+.env.production
 webpack.mix.js
